--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>PHYS-S12: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div style="align-items: left; justify-content:left;" class="container-fluid">
-    <h3 class="nav-title"> PS70: Intro to Digital Fabrication</h3>
+    <h3 class="nav-title"> PHYS-S12: Intro to Digital Fabrication</h3>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
       <h4><a class="nav-link" href="./about.html">About</a></h4>
@@ -23,7 +23,7 @@
   
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
+      <img src = "https://www.cnet.com/a/img/resize/f464a55dbe70782e15b20fd3698540734ff77dad/hub/2016/09/13/f3185c26-be79-4a45-9013-c1c1168aa5d9/pd6b-aw-arm01-1024x683.jpg?auto=webp&fit=crop&height=675&width=1200"  width=420px  alt=DroneProjectProposal >
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
@@ -50,6 +50,7 @@
       [Broken Link]()
     </div>
   </div>
+  <p style = "font-size: 400px;">This works?</p>
 </div>
 </div>
 
