add 1 vid and template for 3 ideas

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -23,15 +23,52 @@
 <xmp style="display:none;">
 <br> 
 
-#### Week 1: Introduction 
+#### Week 1 Day 1: Introduction 
 
 <div class="myDiv">
-    <br><p style = "color:snow;"> hello </p><br>
-     </div>
+    <br><p style = "color:snow;"> 
+    My first idea for my final project is a drone that can hold light weight things with some type of arm/hand. I will build a basic drone like shown in the video tutorial, but buff it up enough so that the drone can hold an arm/hand that function like shown in the second video. This drone will also follow you in order to make transportation of items less annoying.
 
-<iframe width="420" height="345" src="https://www.youtube.com/embed/DeSDjjicGWY">
-</iframe>
-<br><img src = "https://www.cnet.com/a/img/resize/f464a55dbe70782e15b20fd3698540734ff77dad/hub/2016/09/13/f3185c26-be79-4a45-9013-c1c1168aa5d9/pd6b-aw-arm01-1024x683.jpg?auto=webp&fit=crop&height=675&width=1200"  width=500px  alt=DroneProjectProposal ><br>
+    </p><br>
+</div>
+<div class="vidDiv">
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/DeSDjjicGWY">
+  </iframe>
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/4orPPtsaHpc">
+  </iframe>
+  <br><img src = "https://www.cnet.com/a/img/resize/f464a55dbe70782e15b20fd3698540734ff77dad/hub/2016/09/13/f3185c26-be79-4a45-9013-c1c1168aa5d9/pd6b-aw-arm01-1024x683.jpg?auto=webp&fit=crop&height=675&width=1200"  width=500px  alt=DroneProjectProposal ><br>
+</div>
+
+
+<div class="myDiv">
+    <br><p style = "color:snow;"> 
+    Insert Second Idea
+
+    </p><br>
+</div>
+<div class="vidDiv">
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/DeSDjjicGWY">
+  </iframe>
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/4orPPtsaHpc">
+  </iframe>
+  <br><img src = "https://www.cnet.com/a/img/resize/f464a55dbe70782e15b20fd3698540734ff77dad/hub/2016/09/13/f3185c26-be79-4a45-9013-c1c1168aa5d9/pd6b-aw-arm01-1024x683.jpg?auto=webp&fit=crop&height=675&width=1200"  width=500px  alt=DroneProjectProposal ><br>
+</div>
+
+<div class="myDiv">
+    <br><p style = "color:snow;"> 
+    Insert third idea
+
+    </p><br>
+</div>
+<div class="vidDiv">
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/DeSDjjicGWY">
+  </iframe>
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/4orPPtsaHpc">
+  </iframe>
+  <br><img src = "https://www.cnet.com/a/img/resize/f464a55dbe70782e15b20fd3698540734ff77dad/hub/2016/09/13/f3185c26-be79-4a45-9013-c1c1168aa5d9/pd6b-aw-arm01-1024x683.jpg?auto=webp&fit=crop&height=675&width=1200"  width=500px  alt=DroneProjectProposal ><br>
+</div>
+
+
 Here is an image: 
 
 ![image of embroidery](./sew.png)
