--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 ## About Me
 <p style =  "font-size: 100px;">
 
-  <h3>I am Sai Dheeraj Boddapati, a high school student from Massachusetts who is passionate about the STEM field. This little website is about my journey at Havard, trying to create a final project in PHYS-S12: Intro to Digital Fabrication
+  <h3>I am Sai Dheeraj Boddapati, a high school student from Massachusetts who is passionate about the STEM field. This little website is about my journey at Havard, trying to create a final project while also creating cool weekly projects in PHYS-S12: Intro to Digital Fabrication
   </h3>
 
 </p>
