--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 2: CAD and Laser Cutter](./02_CAD/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
