Images Tutorial Bulb fix

--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -29,35 +29,35 @@
 <a class="nav-link" href="../02_CAD/Laser Cutter/index.html"> <h2><button>Laser Cutter</button></h2></a>
 <a class="nav-link" href="../02_CAD/AssignmentCAD/index.html"> <h2><button>2 CADs</button></h2></a>
 <div class="vidDiv">
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/image2.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep2.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep3.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep4.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep5.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep6.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep7.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep8.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep9.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep10.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep11.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep12.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep13.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep14.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep15.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep16.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep17.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep18.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep19.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep20.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep21.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep22.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep23.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep24.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep25.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep26.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep27.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstep28.png?raw=true"  width=450px  alt=TutorialBulbStep1>
-    <img src = "https://github.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/blob/main/02_CAD/Tutorial%20Bulb/ImagesTutBulb/tutbulbstepfinish.png?raw=true"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/image2.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep2.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep3.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep4.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep5.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep6.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep7.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep8.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep9.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep10.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep11.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep12.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep13.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep14.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep15.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep16.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep17.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep18.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep19.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep20.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep21.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep22.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep23.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep24.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep25.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep26.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep27.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep28.png"  width=450px  alt=TutorialBulbStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstepfinish.png"  width=450px  alt=TutorialBulbStep1>
 
 </div>
 </xmp>
