all images added to website

--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -58,8 +58,121 @@
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep27.png"  width=450px  alt=TutorialBulbStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep28.png"  width=450px  alt=TutorialBulbStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstepfinish.png"  width=450px  alt=TutorialBulbStep1>
+</div> <br><br>
 
-</div>
+<div class="vidDiv">
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep1.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep2.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep3.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep4.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep5.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep6.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep7.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep8.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep9.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep10.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep11.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep12.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep13.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep14.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep15.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep16.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep17.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep18.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep19.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep20.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep21.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep22.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep23.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep24.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep25.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep26.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep27.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep28.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep29.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep30.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep31.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep32.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep33.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep34.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep35.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep36.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep37.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep38.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep39.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep40.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep41.png"  width=450px  alt=PenStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstepfinish.png"  width=450px  alt=PenStep1>
+</div><br><br>
+
+<div class="vidDiv">
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep1.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep2.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep3.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep4.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep5.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep6.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep7.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep8.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep9.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep10.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep11.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep12.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep13.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep14.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep15.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep16.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep17.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep18.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep19.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep20.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep21.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep22.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep23.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep24.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep25.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep26.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep27.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep28.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep29.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep30.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep31.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep32.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep33.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep34.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep35.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep36.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep37.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep38.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep39.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep40.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep41.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep42.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep43.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep44.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep45.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep46.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep47.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep48.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep49.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep50.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep51.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep52.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep53.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep54.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep55.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep56.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep57.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep58.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep59.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep60.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep61.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep62.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep63.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstepfinish1.png"  width=450px  alt=AppleWatchStep1>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstepfinish2.png"  width=450px  alt=AppleWatchStep1>
+</div> <br> <br>
+
 </xmp>
 
 
